--- a/index.html
+++ b/index.html
@@ -47,9 +47,94 @@
             </li>
           </ul>
         </div>
-        <div class="email-wrapper"></div>
-        <div class="mood-wrapper"></div>
-        <div class="quote-wrapper"></div>
+        <div class="email-wrapper">
+          <div class="email-title">
+            <h2>Email Inbox</h2>
+            <p>Pegah.pga@gmail.com</p>
+          </div>
+          <ul class="emails-list">
+            <li class="email-items">
+              <div class="email-image">
+                <img src="./assets/images/robocop.png" alt="robocop" />
+              </div>
+              <div class="email-items--details">
+                <h3>
+                  RoboCop: Rogue City from your Steam wishlist is now on sale!
+                </h3>
+                <p>steam</p>
+              </div>
+            </li>
+            <li class="email-items">
+              <div class="email-image">
+                <img src="./assets/images/github.png" alt="github" />
+              </div>
+              <div class="email-items--details">
+                <h3>Destination: Poolside</h3>
+                <p>Github</p>
+              </div>
+            </li>
+            <li class="email-items">
+              <div class="email-image">
+                <img src="./assets/images/h&m.png" alt="h&m" />
+              </div>
+              <div class="email-items--details">
+                <h3>Destination: Poolside</h3>
+                <p>H & M</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="mood-wrapper">
+          <div class="mood-title">
+            <h2>How are you feeling?</h2>
+            <p>Track your mood</p>
+          </div>
+          <ul class="mood-list">
+            <li class="mood-items">
+              <img src="./assets/images/smiling_face_color 1.svg" alt="smile" />
+              <p>Excellent</p>
+            </li>
+            <li class="mood-items">
+              <img src="./assets/images/sleepy_face_color 1.svg" alt="sleepy" />
+              <p>Sleepy</p>
+            </li>
+            <li class="mood-items">
+              <img
+                src="./assets/images/face_with_thermometer_color 1.svg"
+                alt="sick" />
+              <p>Sick</p>
+            </li>
+            <li class="mood-items">
+              <img
+                src="./assets/images/drooling_face_color 1.svg"
+                alt="hungry" />
+              <p>Hungry</p>
+            </li>
+            <li class="mood-items">
+              <img src="./assets/images/hot_face_color 1.svg" alt="hot" />
+              <p>Hot</p>
+            </li>
+            <li class="mood-items">
+              <img
+                src="./assets/images/face_with_diagonal_mouth_color 1.svg"
+                alt="meh" />
+              <p>Meh</p>
+            </li>
+          </ul>
+        </div>
+        <div class="quote-wrapper">
+          <div class="quote-title">
+            <h2>Quote of the Day</h2>
+            <p>Make sure to remember</p>
+          </div>
+          <div class="quote-subtitle">
+            <p>
+              “If you can't dazzle them with brilliance, baffle them with
+              bullshit.”
+            </p>
+            <p class="sub-badge">W.C. Fields</p>
+          </div>
+        </div>
         <div class="news-wrapper"></div>
       </section>
     </div>
