--- a/index.html
+++ b/index.html
@@ -135,7 +135,18 @@
             <p class="sub-badge">W.C. Fields</p>
           </div>
         </div>
-        <div class="news-wrapper"></div>
+        <div class="news-wrapper">
+          <div class="nav">
+            <ul class="news-nav">
+              <li class="nav-items">Games</li>
+              <li class="nav-items">Technology</li>
+              <li class="nav-items">Crypto</li>
+            </ul>
+          </div>
+          <div class="news-image">
+            <img src="./assets/images/Frame 2.png" alt="games" />
+          </div>
+        </div>
       </section>
     </div>
   </body>
